<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="match_parent"
    android:theme="@style/AppTheme.NoActionBar"
    android:layout_height="match_parent"
    android:background="@color/colorBackground2"
    android:animateLayoutChanges="true"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ltq_logo"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logo"
        android:layout_marginStart="@dimen/margin_start"
        android:layout_marginEnd="@dimen/margin_end"
        android:layout_marginTop="@dimen/top_appname"
        android:text="@string/lvivtripquest"
        android:textColor="@color/colorBackground"
        android:layout_centerHorizontal="true"/>

    <EditText
        android:id="@+id/editEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/app_name"
        android:layout_marginStart="@dimen/margin_top_for_button"
        android:layout_marginEnd="@dimen/margin_top_for_button"
        android:layout_marginTop="@dimen/margin_top_for_button"
        android:inputType="textEmailAddress"
        android:hint="@string/email_adress"
        android:textColor="@color/textColor"
        android:layout_centerHorizontal="true"/>

    <EditText
        android:id="@+id/editPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editEmail"
        android:layout_marginStart="@dimen/margin_top_for_button"
        android:layout_marginEnd="@dimen/margin_top_for_button"
        android:layout_marginTop="@dimen/between_email_password"
        android:inputType="textPassword"
        android:hint="@string/your_password"
        android:textColor="@color/textColor"
        android:layout_centerHorizontal="true"/>

    <EditText
        android:id="@+id/confirmPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_top_for_button"
        android:layout_marginEnd="@dimen/margin_top_for_button"
        android:layout_below="@+id/editPassword"
        android:inputType="textPassword"
        android:hint="@string/confirm_password"
        android:textColor="@color/textColor"

        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/changeTypeAuth"
        android:text="@string/already_have_an_acc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/confirmPassword"
        android:layout_marginTop="@dimen/between_email_password"
        android:layout_centerHorizontal="true"
        android:gravity="center"/>

    <Button
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/changeTypeAuth"
        android:layout_marginStart="@dimen/margin_top_for_button"
        android:layout_marginEnd="@dimen/margin_top_for_button"
        android:layout_marginTop="@dimen/top_of_login"
        android:text="@string/login"
        android:textColor="#FF907AEC"
        tools:text="Log In"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/sign_with"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_above="@+id/socials_login"
        android:layout_marginBottom="20dp"
        android:text="Sign in with:"
        android:textColor="@color/textColor"
        android:layout_centerHorizontal="true"
        />

    <LinearLayout
        android:id="@+id/socials_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/fab_margin">

        <ImageButton
            android:id="@+id/authButtonFacebook"
            android:background="?android:selectableItemBackground"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"

            app:srcCompat="@drawable/facebook_auth" />

        <ImageButton
            android:id="@+id/authButtonGoogle"
            android:background="?android:selectableItemBackground"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/google_plus"/>
    </LinearLayout>
</RelativeLayout>