<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerHorizontal="true"
    android:layout_centerVertical="true"
    android:layout_marginRight="40dp"
    android:layout_marginLeft="40dp"
    android:layout_marginBottom="71dp"
    android:padding="6dp"
    android:elevation="6dp">

    <TextView
        android:id="@+id/edit_options"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="21dp"
        android:layout_marginLeft="24dp"
        android:textSize="20sp"
        android:fontFamily="sans-serif-medium"
        android:textStyle="normal"
        android:textColor="#dd000000"
        android:lineSpacingExtra="8sp"
        android:text="@string/edit_options"/>

    <LinearLayout
        android:id="@+id/layout1"
        android:layout_below="@+id/edit_options"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/ava"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="21dp"
            android:layout_marginLeft="25dp"
            android:src="@drawable/ava"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/user_name_options"
            android:layout_marginTop="21dp"
            android:layout_marginLeft="23dp"
            android:textSize="16sp"
            android:fontFamily="sans-serif"
            android:textStyle="normal"
            android:textColor="#dd000000"
            android:lineSpacingExtra="8sp"
            android:text="@string/users_name"/>
    </LinearLayout>

    <ImageView
        android:layout_below="@id/layout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="6dp" />

    <LinearLayout
        android:id="@+id/layout2"
        android:layout_below="@+id/layout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/male_layout">

            <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/on_male_click"
                    android:layout_marginTop="23dp"
                    android:layout_marginLeft="24dp"
                    android:src="@drawable/yes"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textMale"
                    android:layout_marginTop="24dp"
                    android:layout_marginLeft="11dp"
                    android:textSize="16sp"
                    android:fontFamily="sans-serif-medium"
                    android:textStyle="normal"
                    android:textColor="#747474"
                    android:lineSpacingExtra="10sp"
                    android:text="@string/sex"/>

        </LinearLayout>

       <LinearLayout
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:id="@+id/female_layout">

           <ImageView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_marginTop="24dp"
                   android:layout_marginLeft="27dp"
                   android:id="@+id/on_female_click"
                   android:src="@drawable/no"/>

           <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:id="@+id/textFemale"
                   android:layout_marginTop="24dp"
                   android:layout_marginLeft="11dp"
                   android:textSize="16sp"
                   android:fontFamily="sans-serif-medium"
                   android:textStyle="normal"
                   android:textColor="#747474"
                   android:lineSpacingExtra="10sp"
                   android:text="@string/sexf"/>

       </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/facebook_options_layout"
        android:layout_below="@+id/layout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="39dp"
            android:layout_marginLeft="20dp"
            android:src="@drawable/facebook_logo_profile"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="26dp"
            android:textSize="18sp"
            android:fontFamily="sans-serif"
            android:textStyle="normal"
            android:textColor="#dd000000"
            android:lineSpacingExtra="8sp"
            android:text="@string/email_facebook"/>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/google_options_layout"
        android:layout_below="@id/facebook_options_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="39dp"
            android:layout_marginLeft="24dp"
            android:src="@drawable/google_logo_profile"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="19dp"
            android:textSize="18sp"
            android:fontFamily="sans-serif"
            android:textStyle="normal"
            android:textColor="#dd000000"
            android:lineSpacingExtra="8sp"
            android:text="@string/email_google"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/mail_options_layout"
        android:layout_below="@id/google_options_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="39dp"
            android:layout_marginLeft="23dp"
            android:src="@drawable/mail"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="23dp"
            android:textSize="18sp"
            android:fontFamily="sans-serif"
            android:textStyle="normal"
            android:textColor="#dd000000"
            android:lineSpacingExtra="8sp"
            android:text="@string/email_mail"/>

    </LinearLayout>

    <ImageView
        android:layout_below="@id/mail_options_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="6dp"/>


</RelativeLayout>