<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="61dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:id="@+id/linearLayout">

        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@drawable/avatar"
            />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp">


            <TextView
                android:id="@+id/text1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:text="@string/Current_balance"
                android:textColor="#4a4a4a" />

            <TextView
                android:id="@+id/available_points"
                android:layout_width="114dp"
                android:layout_height="41dp"
                android:layout_alignParentBottom="true"
                android:fontFamily="sans-serif-medium"
                android:text="0"
                android:textColor="#4a4a4a"
                android:textSize="34sp" />

        </RelativeLayout>

    </LinearLayout>

    <ImageView
        android:layout_below="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_alignParentStart="true"
        android:layout_marginTop="24dp"
        android:background="@drawable/line"
        android:id="@+id/toolbarImage" />

    <TextView
        android:id="@+id/text3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/linearLayout"
        android:layout_below="@+id/toolbarImage"
        android:layout_marginStart="24dp"
        android:layout_marginTop="18dp"

        android:text="@string/title"
        android:textColor="#000000"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout3"
        android:layout_below="@+id/linearLayout2"
        android:layout_marginStart="24dp"
        android:layout_marginTop="11dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textDollar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dollar"
                android:textColor="@color/colorTextGray"
                />

            <EditText
                android:id="@+id/edit_dollars"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="1"
                android:maxLength="3"
                android:textSize="34sp"
                android:textColor="#4A4A4A"/>

        </LinearLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="15dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/transfer"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="15dp">

            <TextView
                android:id="@+id/textPoints"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorTextGray"
                android:text="@string/point"/>

            <TextView
                android:id="@+id/points_exchange"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="10"
                android:textSize="34sp"
                android:textColor="#4A4A4A"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:background="@drawable/smal_line"/>

        </LinearLayout>

        <Button
            android:id="@+id/buy_points"
            android:layout_width="54dp"
            android:layout_height="46dp"
            android:layout_marginStart="48dp"
            android:layout_marginTop="30dp"
            android:background="@color/colorButton"
            android:fontFamily="sans-serif-smallcaps"
            android:text="@string/buy"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:typeface="normal"
            android:visibility="visible" />

    </LinearLayout>


</LinearLayout>