<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


    <ImageView
        android:id="@+id/lviv_photo_backGround"
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:scaleType="centerCrop"
        android:src="@drawable/lviv_photo_backGround"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constrainTop_toTopOf="parent"
       />


        <ImageView
            android:id="@+id/user_avatan"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="183dp"
            android:src="@drawable/avatar_empty"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <ImageView
            android:id="@+id/plus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/user_avatan"
            android:layout_alignTop="@+id/user_avatan"
            android:src="@drawable/plus" />

        <TextView
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/name_user"
            android:layout_centerHorizontal="true"
            android:text="@string/email"
            android:textSize="15sp"
            android:textStyle="normal"/>

        <TextView
            android:id="@+id/name_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/user_avatan"
            android:layout_centerHorizontal="true"
            android:text="@string/name_user"
            android:textSize="25sp"
            android:textStyle="bold"/>

        <ImageView
            android:id="@+id/instagram"
            android:layout_width="62dp"
            android:layout_height="62dp"
            android:layout_below="@+id/email"
            android:layout_marginTop="46dp"
            android:layout_toStartOf="@+id/name_user"
            android:src="@drawable/inst" />

        <ImageView
            android:id="@+id/facebook"
            android:layout_width="62dp"
            android:layout_height="62dp"
            android:layout_alignTop="@+id/instagram"
            android:layout_centerHorizontal="true"
            android:src="@drawable/facebook" />

        <ImageView
            android:id="@+id/gmail"
            android:layout_width="62dp"
            android:layout_height="62dp"
            android:layout_alignTop="@+id/facebook"
            android:layout_toEndOf="@+id/name_user"
            android:src="@drawable/gmail" />

        <TextView
            android:id="@+id/logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/facebook"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="13dp"
            android:text="@string/log_out"
            android:textAllCaps="true"
            android:textSize="12sp"
            android:textStyle="bold|italic|normal"
             />

    </RelativeLayout>
</LinearLayout>
